# bbftp

./: INSTALL  Makefile  NEWS  README  changes.txt
bbftp-client/: ChangeLog  TODO
bbftp-client/bbftpc/: BBFTP-ERROR-CODE  BBFTP-WARNING-CODE  Makefile.in  _bbftp.h  bbftp.c  bbftp_cd.c  bbftp_cert.c  bbftp_cmds.c  bbftp_dir.c  bbftp_get.c  bbftp_lcd.c  bbftp_list.c  bbftp_mget.c  bbftp_mkdir.c  bbftp_mput.c  bbftp_msg.c  bbftp_private.c  bbftp_private_user.c  bbftp_put.c  bbftp_retr.c  bbftp_retr_rfio.c  bbftp_rm.c  bbftp_setremotecos.c  bbftp_setremoteumask.c  bbftp_socket.c  bbftp_stat.c  bbftp_statfs.c  bbftp_store.c  bbftp_store_rfio.c  bbftp_turl.c  bbftp_utils.c  bbftpstatus.c  configure  configure.in  connecttoserver.c  getdatasock.c  readmessage.c  sendproto.c  setsignals.c  treatcommand.c  (+1 more)
bbftp-client/doc/: PROTO_V1  PROTO_V2  PROTO_V3  bbftp.1  instclient  ports  private
bbftp-client/gfw/: Makefile.in  gfw-config.h.in  gfw-server.c  gfw_init.c
bbftp-client/includes/: acconfig.h  aclocal.m4  bbftp.h.in  bbftp_private_user.h  bbftpd_private.h  bbftpd_private_user.h  client.h  client_proto.h  common.h  daemon.h  port_sys.h  status.h  structures.h  version.h
bbftp-server/: README
bbftp-server/bbftpd/: Makefile.in  _bbftpd.h  bbftpd.c  bbftpd_cd.c  bbftpd_cert.c  bbftpd_check.c  bbftpd_crypt.c  bbftpd_daemon.c  bbftpd_list.c  bbftpd_logging.c  bbftpd_login.c  bbftpd_message.c  bbftpd_mkdir.c  bbftpd_private.c  bbftpd_private_user.c  bbftpd_readcontrol.c  bbftpd_retr.c  bbftpd_retr_rfio.c  bbftpd_rm.c  bbftpd_signals.c  bbftpd_socket.c  bbftpd_stat.c  bbftpd_statfs.c  bbftpd_store.c  bbftpd_store_rfio.c  bbftpd_utils.c  changetodir.c  configure  configure.in  createadir.c  createreceivesock.c  readcontrol.c  sendafile.c  sendafilerfio.c  sendlist.c  set_father_signals.c  signals_routines.c  startup.in  storeafile.c
bbftp-server/bbftpd/v1/: readcontrol.c  sendafilerfio.c  sendlist.c  set_father_signals.c  storeafile.c
bbftp-server/doc/: bbftpd.1  cert_requ  externsoft  instserver  stats
bbftp-server/gfw/: README  configure  configure.in  gfw-client.c  gfw-misc.c  gfw-misc.h  gfw.h  gfw_accept.c  gfw_acquire.c
bbftp-server/includes/: bbftp.h.in  bbftp_private.h  bbftp_turl.h  common.h  config.h  daemon.h  daemon_proto.h  structures.h  version.h
scripts/: bbftp-get
tests/: Makefile  runserver.sh  runtests.sh  runtests.sl
